--- a/src/app/pages/home/home.page.scss
+++ b/src/app/pages/home/home.page.scss
@@ -227,7 +227,7 @@ ion-button {
   --padding-start: 0;
   --padding-end: 0;
 }
-  
+
 .toolbar-home {
   --background: #f6f6f6;
   --color: #044C63;
@@ -241,5 +241,77 @@ ion-button {
 /* Oculta botones extras en el header dejando solo el de perfil */
 .toolbar-home ion-buttons[slot="end"] ion-button:not(:last-child) {
   display: none;
+}
+
+.modal-proyecto::part(content) {
+  border-radius: 16px 16px 0 0;
+  min-height: 65vh;
+  width: 340px;
+  max-width: 340px;
+  margin: 0 auto;
+}
+
+.modal-proyecto {
+  color: #000;
+}
+
+.modal-proyecto ion-label {
+  color: #000;
+}
+
+.modal-proyecto ion-textarea textarea {
+  color: #044C63;
+}
+
+.modal-proyecto ion-input input {
+  color: #044C63;
+}
+
+/* Refuerza color y placeholder dentro del modal para Ionic */
+.modal-proyecto ion-input {
+  --color: #044C63;
+  --placeholder-color: #6a8a96;
+  --placeholder-opacity: 1;
+}
+
+.modal-proyecto ion-textarea {
+  --color: #044C63;
+  --placeholder-color: #6a8a96;
+  --placeholder-opacity: 1;
+}
+
+.modal-proyecto ion-select {
+  --color: #044C63;
+  --placeholder-color: #6a8a96;
+  --placeholder-opacity: 1;
+}
+
+.form-proyecto ion-item {
+  --background: #fdfdfd;
+  --border-radius: 10px;
+  margin-bottom: 10px;
+}
+
+.form-proyecto ion-label {
+  font-weight: 600;
+}
+
+.modal-acciones {
+  display: flex;
+  justify-content: flex-end;
+  gap: 12px;
+  margin-top: 10px;
+}
+
+.error {
+  color: #d93025;
+  margin: 6px 2px;
+  font-weight: 600;
+}
+
+.help-text {
+  color: #566066;
+  font-size: 12px;
+  margin: 4px 2px 10px;
 }
 
